adding microbenchmark for H1 kernel

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -43,6 +43,7 @@ set(weakform_tests_serial
     tests/test_tensor_ad.cpp
     tests/tuple_arithmetic_unit_tests.cpp
     tests/J2_material_with_AD.cpp
+    tests/kernel_microbenchmark.cpp
     tests/tensor_unit_tests.cpp)
     
 foreach(filename ${weakform_tests_serial})
