gtestify comparison test

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -38,16 +38,19 @@ install(TARGETS              serac_weakform
         DESTINATION          lib
         )
 
+# this test is all constexpr-evaluated, so it doesn't
+# actually need to run, if it compiles without error, the tests have passed
+blt_add_executable(NAME        tensor_unit_tests
+                   SOURCES     tests/tensor_unit_tests.cpp
+                   OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
+                   DEPENDS_ON  gtest serac_weakform ${weakform_depends}
+                   FOLDER      serac/tests)
 
 # Then add the examples/tests
 set(weakform_tests_serial
     tests/hcurl_unit_tests.cpp
     tests/test_tensor_ad.cpp
-    tests/tuple_arithmetic_unit_tests.cpp
-    tests/J2_material_with_AD.cpp
-    tests/kernel_microbenchmark.cpp
-    tests/diffusion_performance_test.cpp
-    tests/tensor_unit_tests.cpp)
+    tests/tuple_arithmetic_unit_tests.cpp)
     
 foreach(filename ${weakform_tests_serial})
     get_filename_component(test_name ${filename} NAME_WE)
@@ -79,3 +82,11 @@ foreach(filename ${weakform_tests_mpi})
                  COMMAND       ${test_name}
                  NUM_MPI_TASKS 4)
 endforeach()
+
+
+# not sure how we want to handle performance-related tests
+set(weakform_performance_tests
+    tests/J2_material_with_AD.cpp
+    tests/kernel_microbenchmark.cpp
+    tests/diffusion_performance_test.cpp)
+    
