--- a/.uberenv_config.json
+++ b/.uberenv_config.json
@@ -1,7 +1,7 @@
 {
 "package_name" : "serac",
 "package_version" : "develop",
-"package_final_phase" : "hostconfig",
+"package_final_phase" : "initconfig",
 "package_source_dir" : "../..",
 "force_commandline_prefix" : false,
 "spack_url": "https://github.com/spack/spack",
