--- a/.uberenv_config.json
+++ b/.uberenv_config.json
@@ -2,7 +2,7 @@
 "package_name" : "serac",
 "package_version" : "develop",
 "package_final_phase" : "hostconfig",
-"package_source_dir" : "../..",
+"package_source_dir" : ".",
 "force_commandline_prefix" : false,
 "spack_url": "https://github.com/spack/spack",
 "spack_commit": "1a080b9a00a7952dd636d9eba7137e61ae4af4b6",
