--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -8,7 +8,7 @@ RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpi
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
 RUN sudo python3 -m pip install --upgrade pip
-RUN sudo python3 -m pip install cffi
+RUN sudo python3 -m pip install cffi pyyaml
 RUN sudo python3 -m pip install -i https://test.pypi.org/simple/ clingo-cffi-wheel
 
 # Avoid building CMake from scratch
