--- a/.uberenv_config.json
+++ b/.uberenv_config.json
@@ -2,7 +2,7 @@
 "package_name" : "serac",
 "package_version" : "develop",
 "package_final_phase" : "initconfig",
-"package_source_dir" : ".",
+"package_source_dir" : "../..",
 "force_commandline_prefix" : false,
 "spack_url": "https://github.com/spack/spack",
 "spack_commit": "58a897be0ec6fbd783a9d6193aaaaac86f4e4e60",
