--- a/scripts/spack/configs/darwin/compilers.yaml
+++ b/scripts/spack/configs/darwin/compilers.yaml
@@ -2,13 +2,14 @@ compilers:
 - compiler:
     environment: {}
     extra_rpaths: []
-    flags: {}
+    flags:
+      cflags: -Wno-implicit-function-declaration
     modules: []
-    operating_system: mojave
+    operating_system: catalina
     paths:
       cc: /usr/bin/clang
       cxx: /usr/bin/clang++
       f77: /usr/local/bin/gfortran
       fc: /usr/local/bin/gfortran
-    spec: apple-clang@10.0.1
+    spec: apple-clang@11.0.1
     target: x86_64
