--- a/.gitlab/build_lassen.yml
+++ b/.gitlab/build_lassen.yml
@@ -15,6 +15,10 @@
 .with_cuda:
   before_script:
     - module load cuda/11.1.1
+    # python3.8 is needed on lassen to avoid trampling on the x86 clingo wheel
+    # This is not the ideal place for it but the pipeline syntax doesn't allow
+    # for multiple before_scripts - see https://gitlab.com/gitlab-org/gitlab-runner/-/issues/2301
+    - module load python/3.8
 
 ####
 # Template
@@ -31,9 +35,6 @@
     ALLOC_COMMAND: lalloc 1 -W 45 -q pdebug -G eng
   extends: [.full_build_script, .on_lassen, .full_workflow]
   needs: []
-  # python3.8 is needed on lassen to avoid trampling on the x86 clingo wheel
-  before_script:
-     - module load python/3.8
 
 ####
 # Build jobs
