responding to jamie's PR feedback

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -26,8 +26,7 @@ set(weakform_headers
     detail/quadrilateral_hcurl.inl
     detail/quadrilateral_L2.inl
     detail/segment_h1.inl
-    detail/meta.h
-    detail/timer.hpp
+    detail/metaprogramming.hpp
     )
 
 blt_add_library(
