--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ stages:
     # BUILD + TEST
     - echo -e "section_start:$(date +%s):src_build_and_test\r\e[0K
       Source Build and Test ${CI_PROJECT_NAME}"
-    - ${ALLOC_COMMAND} python3 scripts/llnl/build_src.py -v --host-config ${HOST_CONFIG}
+    - ${ALLOC_COMMAND} python3 scripts/llnl/build_src.py -v --host-config ${HOST_CONFIG} ${EXTRA_BUILD_OPTIONS}
     - echo -e "section_end:$(date +%s):src_build_and_test\r\e[0K"
   artifacts:
     paths:
@@ -63,3 +63,4 @@ stages:
 include:
   - local: .gitlab/build_quartz.yml
   - local: .gitlab/build_lassen.yml
+
