Lock down clangformat version to 10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ foreach(_tool ${_used_blt_tools})
     endif()
 endforeach()
 
+set(BLT_REQUIRED_CLANGFORMAT_VERSION  "10" CACHE STRING "")
+
 set(ENABLE_BENCHMARKS  OFF CACHE BOOL "")
 
 set(ENABLE_ALL_WARNINGS ON CACHE BOOL "")
