--- a/scripts/spack/configs/linux_ubuntu_20/compilers.yaml
+++ b/scripts/spack/configs/linux_ubuntu_20/compilers.yaml
@@ -7,6 +7,8 @@ compilers:
       f77: /usr/bin/gfortran
       fc: /usr/bin/gfortran
     flags: 
+      cflags: -pthread
+      cxxflags: -pthread
       ldlibs: -lpthread
     operating_system: ubuntu20.04
     target: x86_64
