added profiling tags to functional_comparisons

--- a/src/serac/physics/utilities/functional/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/CMakeLists.txt
@@ -5,6 +5,7 @@
 # SPDX-License-Identifier: (BSD-3-Clause)
 
 set(functional_depends serac_physics mfem mpi)
+blt_list_append( TO functional_depends ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
 #if(ENABLE_CUDA)
 #    list(APPEND functional_depends cuda)
