temporarily commented out navier_stokes_tests for tensor_unit_tests. Changed shape[0] -> first_dim

--- a/src/serac/physics/utilities/functional/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/CMakeLists.txt
@@ -7,9 +7,9 @@
 set(functional_depends serac_physics mfem mpi)
 blt_list_append( TO functional_depends ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
-#if(ENABLE_CUDA)
-#    list(APPEND functional_depends cuda)
-#endif()
+if(ENABLE_CUDA)
+    list(APPEND functional_depends cuda)
+endif()
 
 # Add the library first
 set(functional_headers
