--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -37,6 +37,9 @@ if(NOT SERAC_FOUND)
   set(SERAC_USE_CALIPER        "@SERAC_USE_CALIPER@")
   set(SERAC_USE_PETSC          "@SERAC_USE_PETSC@")
 
+  # SERAC "builtin" TPLs
+  set(SERAC_ENABLE_CUDA "@ENABLE_CUDA@")
+
   #----------------------------------------------------------------------------
   # Bring in required  dependencies for this serac configuration
   #----------------------------------------------------------------------------
@@ -102,6 +105,10 @@ if(NOT SERAC_FOUND)
     set(SERAC_CALIPER_DIR     "@CALIPER_DIR@")
     if(NOT CALIPER_DIR) 
       set(CALIPER_DIR ${SERAC_CALIPER_DIR}) 
+    endif()
+    # See comment in SetupSeracThirdParty.cmake
+    if(SERAC_ENABLE_CUDA AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.17)
+      find_package(CUDAToolkit REQUIRED)
     endif()
     find_dependency(caliper REQUIRED NO_DEFAULT_PATH PATHS "${CALIPER_DIR}")
   endif()
