--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -19,7 +19,7 @@ quartz_allocate:
   extends: [.on_quartz, .src_workflow]
   stage: allocate
   script:
-    - salloc -p pdebug -A eng -N 1 -c 36 -t 30 --no-shell --job-name=${PROJECT_ALLOC_NAME}
+    - salloc -p pdebug -A ${ALLOC_BANK} -N 1 -c 36 -t 30 --no-shell --job-name=${PROJECT_ALLOC_NAME}
   needs: []
 
 ####
@@ -39,14 +39,14 @@ quartz_release:
 .src_build_on_quartz:
   stage: build
   variables:
-    ALLOC_COMMAND: "srun -p pdebug -A eng -t 10 -N 1 ${ASSIGN_ID}"
+    ALLOC_COMMAND: "srun -p pdebug -A ${ALLOC_BANK} -t 10 -N 1 ${ASSIGN_ID}"
   extends: [.src_build_script, .on_quartz, .src_workflow]
   needs: [quartz_allocate]
 
 .full_build_on_quartz:
   stage: build
   variables:
-    ALLOC_COMMAND: "srun -p pdebug -A eng -t 45 -N 1"
+    ALLOC_COMMAND: "srun -p pdebug -A ${ALLOC_BANK} -t 45 -N 1"
   extends: [.full_build_script, .on_quartz, .full_workflow]
   needs: []
   before_script:
