--- a/src/serac/numerics/CMakeLists.txt
+++ b/src/serac/numerics/CMakeLists.txt
@@ -10,10 +10,12 @@ set(numerics_headers
     expr_template_ops.hpp
     mesh_utils.hpp
     vector_expression.hpp
+    assembled_sparse_matrix.hpp
     )
 
 set(numerics_sources
     mesh_utils.cpp
+    assembled_sparse_matrix.cpp	
     )
 
 set(numerics_depends serac_infrastructure)
