--- a/src/serac/physics/utilities/functional/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/CMakeLists.txt
@@ -6,6 +6,8 @@
 
 set(functional_depends serac_physics mfem mpi)
 
+blt_list_append( TO functional_depends ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
+
 #if(ENABLE_CUDA)
 #    list(APPEND functional_depends cuda)
 #endif()
