--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -25,10 +25,11 @@ RUN git clone --recursive --branch $branch --single-branch --depth 1 https://git
 RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu18/ \
                                                      --project-json=.uberenv_config.json \
                                                      --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k \
-             && rm -rf serac_tpls/builds
+             && rm -rf /home/serac/serac_tpls/builds
 
 RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac/*.cmake /home/serac/export_hostconfig
 
 # Make sure the new hostconfig worked
-RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test && rm -rf serac
+RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test \
+             && cd /home/serac && rm -rf serac
