--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,12 +12,12 @@ jobs:
           VM_ImageName: 'ubuntu-16.04'
           Compiler_ImageName: 'seracllnl/tpls:gcc-8_06-10-21_16h-59m'
           TEST_TARGET: 'linux_gcc8'
-          HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0.cmake'
+          HOST_CONFIG: 'docker-linux-ubuntu16.04-ivybridge-gcc@8.1.0.cmake'
       linux_clang10:
           VM_ImageName: 'ubuntu-18.04'
           Compiler_ImageName: 'seracllnl/tpls:clang-10_06-10-21_06h-15m'
           TEST_TARGET: 'linux_clang10'
-          HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0.cmake'
+          HOST_CONFIG: 'docker-linux-ubuntu18.04-ivybridge-clang@10.0.0.cmake'
 
   pool:
     vmImage: $(VM_ImageName)
@@ -43,7 +43,7 @@ jobs:
     VM_ImageName: 'ubuntu-18.04'
     Compiler_ImageName: 'seracllnl/tpls:clang-10_05-04-21_15h-09m'
     TEST_TARGET: 'linux_clang10'
-    HOST_CONFIG: 'docker-linux-ubuntu18.04-x86_64-clang@10.0.0'
+    HOST_CONFIG: 'docker-linux-ubuntu18.04-ivybridge-clang@10.0.0'
 
   strategy:
     matrix:
