add cuda to packages.yaml

--- a/scripts/spack/configs/linux_ubuntu_20/packages.yaml
+++ b/scripts/spack/configs/linux_ubuntu_20/packages.yaml
@@ -76,6 +76,12 @@ packages:
     externals:
     - spec: zlib@1.2.11
       prefix: /usr
+  cuda:
+    buildable: false
+    externals:
+    - spec: cuda@11.2.0
+      prefix: /usr/local/cuda-11.2
+
 
   # Lock in versions of Devtools
   cmake:
