--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -4,11 +4,11 @@ ARG branch=develop
 
 SHELL ["/bin/bash", "-c"]
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich lcov xsltproc python3 python3-pip -fy
+RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich lcov xsltproc python3 python3-pip doxygen cppcheck -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
 RUN sudo python3 -m pip install --upgrade pip
-RUN sudo python3 -m pip install clingo
+RUN sudo python3 -m pip install clingo sphinx
 
 # Avoid building CMake from scratch
 RUN wget https://cmake.org/files/v3.18/cmake-3.18.5-Linux-x86_64.sh
@@ -24,7 +24,7 @@ RUN git clone --recursive --branch $branch --single-branch --depth 1 https://git
 # New containers will use Python3
 RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu18/ \
                                                      --project-json=.uberenv_config.json \
-                                                     --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k \
+                                                     --spec=%clang@10.0.0+devtools --prefix=/home/serac/serac_tpls -k \
              && rm -rf /home/serac/serac_tpls/builds
 
 RUN mkdir -p /home/serac/export_hostconfig
