more changes from std::tuple -> serac::tuple

--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -25,9 +25,9 @@ endforeach()
 
 # Then add the examples/tests
 set(functional_tests_mpi
-    # functional_boundary_test.cpp
-    # functional_comparisons.cpp
-    # functional_comparison_L2.cpp
+    #functional_boundary_test.cpp
+    #functional_comparisons.cpp
+    functional_comparison_L2.cpp
     )
     
 foreach(filename ${functional_tests_mpi})
@@ -61,7 +61,7 @@ endforeach()
 if(ENABLE_CUDA)
 
     set(functional_tests_cuda
-    #    tensor_unit_tests_cuda.cu
+        tensor_unit_tests_cuda.cu
     #    functional_comparisons_cuda.cu
     )
         
