fix: try adding pthreads to clang build for hdf5

--- a/scripts/spack/configs/docker/ubuntu20/compilers.yaml
+++ b/scripts/spack/configs/docker/ubuntu20/compilers.yaml
@@ -4,8 +4,8 @@ compilers:
       extra_rpaths: []
       # Axom example sidre_shocktube_F_ex doesn't link otherwise
       flags:
-        cflags: -fPIC
-        cppflags: -fPIC
+        cflags: -fPIC -pthread
+        cppflags: -fPIC -pthread
       modules: []
       operating_system: ubuntu20.04
       paths:
