--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,12 @@ jobs:
   strategy:
     matrix:
       linux_gcc8:
-          VM_ImageName: 'ubuntu-16.04'
+          VM_ImageName: 'ubuntu-20.04'
           Compiler_ImageName: 'seracllnl/tpls:gcc-8_06-29-21_12h-37m'
           TEST_TARGET: 'linux_gcc8'
           HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-gcc@8.4.0.cmake'
       linux_clang10:
-          VM_ImageName: 'ubuntu-18.04'
+          VM_ImageName: 'ubuntu-20.04'
           Compiler_ImageName: 'seracllnl/tpls:clang-10_06-29-21_12h-37m'
           TEST_TARGET: 'linux_clang10'
           HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-clang@10.0.0.cmake'
@@ -40,19 +40,22 @@ jobs:
 
 - job: Check_Code
   variables:
-    VM_ImageName: 'ubuntu-18.04'
-    Compiler_ImageName: 'seracllnl/tpls:clang-10_06-29-21_12h-37m'
-    TEST_TARGET: 'linux_clang10'
-    HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-clang@10.0.0'
+    VM_ImageName: 'ubuntu-20.04'
 
   strategy:
     matrix:
       style:
         DO_STYLE_CHECK: 'yes'
         DO_COVERAGE_CHECK: 'no'
+        Compiler_ImageName: 'seracllnl/tpls:clang-10_06-29-21_12h-37m'
+        TEST_TARGET: 'linux_clang10'
+        HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-clang@10.0.0'
       coverage:
         DO_STYLE_CHECK: 'no'
         DO_COVERAGE_CHECK: 'yes'
+        Compiler_ImageName: 'seracllnl/tpls:gcc-8_06-29-21_12h-37m'
+        TEST_TARGET: 'linux_gcc8'
+        HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-gcc@8.4.0'
 
   pool:
     vmImage: $(VM_ImageName)
