feat: QuadData on GPU with custom array class

--- a/src/serac/serac_config.hpp.in
+++ b/src/serac/serac_config.hpp.in
@@ -36,6 +36,8 @@
 #cmakedefine SERAC_USE_MPI
 #cmakedefine SERAC_USE_TRIBOL
 #cmakedefine SERAC_USE_CALIPER
+#cmakedefine SERAC_USE_RAJA
+#cmakedefine SERAC_USE_UMPIRE
 
 
 #endif  /* SERAC_CONFIG_CPP */
