--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 # Then add the examples/tests
 set(functional_tests_serial
-    functional_boundary_test.cpp # NOTE: this only works in serial due to a possible MFEM bug
+    functional_boundary_test.cpp
     hcurl_unit_tests.cpp
     test_tensor_ad.cpp
     tuple_arithmetic_unit_tests.cpp)
