--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,11 @@
 # Basic CMake Setup
 #------------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.8)
+if(ENABLE_CUDA)
+    cmake_minimum_required(VERSION 3.18)
+else()
+    cmake_minimum_required(VERSION 3.14)
+endif()
 
 project(serac LANGUAGES CXX C)
 
